[package]
name = "curv-kzen"
version = "0.9.0"
edition = "2018"
authors = ["Omer Shlomovits", "Denis Varlakov"]
license = "MIT"
description = "Curv contains an extremely simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
name = "curv"
crate-type = ["lib"]

[dependencies]
digest = "0.9"
generic-array = "0.14"
typenum = "1.13"
hex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
zeroize = "1"
getrandom = { version = "0.2" }
lazy_static = "1.4.0"

rust-gmp-kzen = { version = "0.5", features = [
    "serde_support",
], optional = true }
num-bigint = { version = "0.4", features = ["serde"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
serde_test = "1.0"
paste = "1.0.2"
proptest = "0.10"
proptest-derive = "0.2"
blake2 = "0.9"

[features]
default = ["rust-gmp-kzen"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
